--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UFT-8"/>
     <title>SEGURIDAD DIGITAL PARA MUJERES  </title> 
-    <link href="/D:/programaPILARES/Capacitacion/Actividades Programación/MOODLE/Modulo web/1. TALLER 1/ACTIVIDADES REALIZADAS/MWT1A1_SeguridadDigitalParaMujeres/css/estilo.css" rel="stylesheet" type="text/css">
-   
+    <link href="/css/estilo.css" rel="stylesheet" type="text/css">
+    <script src="/js/script.js" language="javascript" type="text/javascript"></script>
 </head>
 <body>
 <h1 class="elemento">ESCUELA DE CODIGO </h1>
