--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UFT-8"/>
     <title>SEGURIDAD DIGITAL PARA MUJERES  </title> 
     <link href="/../../mw_taller2/css/style.css" rel="stylesheet" type="text/css">
-    <script src="/../../mw_taller2/js/script.js" language="javascript" type="text/javascript"></script>
+    <script src="/../../mw_taller2/js/bienvenida.js" language="javascript" type="text/javascript"></script>
 </head>
 <body>
 
